project1/ingress-foo-bar.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  ingressClassName: nginx
  rules:
  -  http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: foo-svc
            port:
              number: 4200
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-svc
            port:
              number: 8080
